--- a/index.html
+++ b/index.html
@@ -154,18 +154,18 @@
         </div>
 
         <!-- Footer Section -->
-        <div class="footer">
+       <div class="footer">
             <div class="footer-content">
                 <img src="assets/footerlogo.png" alt="Logo" class="footer-logo">
                 <span class="footer-title">Project Retrac</span>
                 <div class="social-icons">
-                    <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-                    <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@retracmp" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.tiktok.com/@retracmp" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://x.com/retracmp" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
+
 
         <!-- Script Section -->
         <script>
