--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Project Retrac is a community that serves OG Fortnite experience!">
+    <meta name="description" content="Project Retrac is a community that serves the OG Fortnite experience with a custom launcher and dedicated servers! Join us for a unique Fortnite adventure.">
     <meta name="keywords" content="project retrac launcher, fortnite, private, private fortnite server, retrac, project retrac, fortnite launcher, retrac launcher">
     <title>Project Retrac</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
