--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Project Retrac is a community that serves the OG Fortnite experience with a custom launcher and dedicated servers! Join us for a unique Fortnite adventure.">
     <meta name="keywords" content="project retrac launcher, fortnite, private, private fortnite server, retrac, project retrac, fortnite launcher, retrac launcher">
-    <title>Project Retrac</title>
+    <title>Project Retrac Fortnite</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
